git: user.useconfigonly = true

--- a/.config/git/config
+++ b/.config/git/config
@@ -17,6 +17,8 @@
 	default = simple
 [rebase]
 	autosquash = true
+[user]
+	useconfigonly = true
 [filter "lfs"]
 	clean = git lfs clean %f
 	smudge = git lfs smudge %f
