Load .env using sh for fish

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-ENV=~/.env
+# The .env file contains the individual user environment variables.
 
-EDITOR=vim
-VISUAL=vim
-
-CLICOLOR=1
+export EDITOR=vim
+export VISUAL=vim
+export CLICOLOR=1
