Add container image shortname for dart

--- a/.config/containers/registries.conf.d/000-shortnames.conf
+++ b/.config/containers/registries.conf.d/000-shortnames.conf
@@ -1,9 +1,15 @@
 [aliases]
 "alpine" = "docker.io/library/alpine"
+
 "fedora-minimal" = "registry.fedoraproject.org/fedora-minimal"
 "fedora" = "registry.fedoraproject.org/fedora"
+
+"dart" = "docker.io/library/dart"
+
 "node" = "docker.io/library/node"
+
 "python" = "docker.io/library/python"
+
 "ruby" = "docker.io/library/ruby"
 "jruby" = "docker.io/library/jruby"
 "truffleruby" = "ghcr.io/graalvm/truffleruby"
