--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@
 !/.config/sh/
 !/.config/zsh/
 
+/.config/containers/auth.json
 /.config/containers/containers.conf
 /.config/containers/podman/machine/
 /.config/fish/fish_history
