Ignore podman 5 files

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@
 
 /.config/containers/auth.json
 /.config/containers/containers.conf
+/.config/containers/podman-connections.json
+/.config/containers/podman-connections.json.lock
 /.config/containers/podman/machine/
 /.config/fish/fish_history
 /.config/fish/fish_read_history
